공양미 충전, 내역 조회, 환전요청 완료

--- a/src/main/resources/templates/customerCenter/faq.html
+++ b/src/main/resources/templates/customerCenter/faq.html
@@ -34,11 +34,11 @@
                             <h2 class="page_header_h2">자주하는 질문</h2>
                         </header>
                         <ul class="article_list">
-                            <!-- <li class="article_list_item article_promoted">
+                            <li class="article_list_item article_promoted">
                                 <a class="article_list_link">
                                     모금액은 언제 정산되나요?
                                 </a>
-                            </li> -->
+                            </li>
                             <li class="article_list_item article_promoted">
                                 <a class="article_list_link" href="/templates/customerCenter/faq-detail.html">
                                     펀딩 모금액에 대한 세무 신고는 어떻게 해야 하나요?
@@ -54,36 +54,36 @@
                                     배송 준비가 다 되었는데, 후원자의 배송지 수정을 마감할 수 있나요?
                                 </a>
                             </li>
-                            <li class="article_list_item article_promoted">
-                                <a class="article_list_link">
-                                    선물 발송 후 운송장 번호를 등록하고 싶습니다.
-                                </a>
-                            </li>
-                            <li class="article_list_item">
-                                <a class="article_list_link">
-                                    후원자에게 현금영수증은 어떻게 발행하나요?
-                                </a>
-                            </li>
-                            <li class="article_list_item">
-                                <a class="article_list_link">
-                                    후원자에게 선물 전달이 모두 완료되었다고 알리고 싶어요!
-                                </a>
-                            </li>
-                            <li class="article_list_item">
-                                <a class="article_list_link">
-                                    배송이 예상 전달일보다 늦어질 것 같아요. 어떻게 해야 하죠?
-                                </a>
-                            </li>
-                            <li class="article_list_item">
-                                <a class="article_list_link">
-                                    펀딩에 성공했는데 후원자님의 결제수단이 유효하지 않다면 어쩌죠?
-                                </a>
-                            </li>
-                            <li class="article_list_item">
-                                <a class="article_list_link">
-                                    펀딩 종료 이후 환불을 원하는 후원자가 있으면 어떡하죠?
-                                </a>
-                            </li>
+<!--                            <li class="article_list_item article_promoted">-->
+<!--                                <a class="article_list_link">-->
+<!--                                    선물 발송 후 운송장 번호를 등록하고 싶습니다.-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="article_list_item">-->
+<!--                                <a class="article_list_link">-->
+<!--                                    후원자에게 현금영수증은 어떻게 발행하나요?-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="article_list_item">-->
+<!--                                <a class="article_list_link">-->
+<!--                                    후원자에게 선물 전달이 모두 완료되었다고 알리고 싶어요!-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="article_list_item">-->
+<!--                                <a class="article_list_link">-->
+<!--                                    배송이 예상 전달일보다 늦어질 것 같아요. 어떻게 해야 하죠?-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="article_list_item">-->
+<!--                                <a class="article_list_link">-->
+<!--                                    펀딩에 성공했는데 후원자님의 결제수단이 유효하지 않다면 어쩌죠?-->
+<!--                                </a>-->
+<!--                            </li>-->
+<!--                            <li class="article_list_item">-->
+<!--                                <a class="article_list_link">-->
+<!--                                    펀딩 종료 이후 환불을 원하는 후원자가 있으면 어떡하죠?-->
+<!--                                </a>-->
+<!--                            </li>-->
                             <li class="article_list_item">
                                 <a class="article_list_link">
                                     종료된 프로젝트를 삭제(비공개)할 수 있나요?
